<resources>
    <!--Label-->
    <string name="app_name">メモ\n日記</string>
    <string name="app_name_label">メモ付き日記！</string>
    <string name="daze_mode">日記登録画面</string>
    <string name="daze_edit_mode">日記編集画面</string>
    <string name="memo_mode">メモ登録画面</string>

    <!-- Tabの名前 -->
    <string name="tab1Name">日記</string>
    <string name="tab2Name">メモ</string>
    <string name="tab3Name">その他</string>

    <!-- 入力画面 -->
    <string name="dazeInput">日記登録</string>
    <string name="memoInput">メモ追加</string>

    <!-- オプションメニュー -->
    <string name="dazeInputOption">日記入力</string>
    <string name="dazeInputOptionChange">日記編集</string>
    <string name="memoInputOption">メモ入力</string>
    <string name="memoInputOptionChange">メモ編集</string>

    <!-- 日記ページ -->
    <string name="title">題名</string>
    <string name="contentString">内容</string>

    <string name="editString">編集</string>
    <string name="deleteString">削除</string>
    <string name="shareString">共有</string>

    <string name="shareFormat">%sの日記\n「%s」\n%s\n\n#日記 #幻想乃桜工房</string>
    <!-- Memoページ -->
    <string name="memoString">メモ</string>

    <!-- 共通 -->
    <string name="input">登録</string>
    <string name="cancelString">キャンセル</string>
    <string name="OKString">決定</string>
    <string name="backColorChange">背景カラー変更</string>
    <string name="testViewString">テスト表示です</string>

    <!-- その他画面 -->
    <string name="useReadMe">使い方について</string>
    <string name="privacyPolicy">プライバシーポリシー</string>
    <string name="hp">幻想乃桜工房のHP</string>
    <string name="appsPage">幻想乃桜工房のアプリ</string>

    <!-- URL -->
    <string name="privacyPolicyURL">https://www.gensounosakura.work/posts/5886855</string>
    <string name="fantasyCherryBlossomURL">https://www.gensounosakura.work/</string>
    <string name="appsPageURL">
        https://play.google.com/store/apps/developer?id=%E5%B9%BB%E6%83%B3%E4%B9%83%E6%A1%9C%E5%B7%A5%E6%88%BF
    </string>
    <string name="search">検索</string>

    <!-- レビュー誘導 -->
    <string name="rate_dialog_title">レビューをお願いします！</string>
    <!-- 初期 -->
    <string name="rate_dialog_message">このアプリはどうですか？</string>
    <string name="rate_dialog_ok">使いやすい</string>
    <string name="rate_dialog_no">そうでもない</string>
    <!-- Store -->
    <string name="rate_dialog_store_message">よろしければレビューをお願いします！</string>
    <string name="rate_dialog_store_ok">OK！</string>
    <string name="rate_dialog_store_no">また今度</string>
    <!-- Mail -->
    <string name="rate_dialog_mail_message">改善点・意見を送りますか？</string>
    <string name="rate_dialog_mail_ok">はい</string>
    <string name="rate_dialog_mail_no">また今度</string>

    <string name="reviewUrl">market://details?id=momonyan.recordapplication</string>
    <string name="reviewMail">gensounosakurakikimimi@gmail.com</string>
    <string name="check_all_delete">チェックあり全削除</string>

</resources>
