<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/memoInput"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/memoInputTextView" android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintVertical_bias="0.3"/>
    <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/textMemoInputLayout"
            android:layout_marginTop="8dp" android:layout_marginBottom="8dp"
            app:layout_constraintTop_toBottomOf="@+id/memoInputTextView" app:layout_constraintBottom_toTopOf="@+id/memoButton"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp">

        <android.support.design.widget.TextInputEditText
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/memoString" android:id="@+id/memoInput" android:inputType="text"/>
    </android.support.design.widget.TextInputLayout>
    <Button
            android:text="@string/input"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/memoButton" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.7"/>
    <Button
            android:text="@string/backColorChange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/changeMemoBackButton" android:layout_marginTop="8dp"
            app:layout_constraintTop_toBottomOf="@+id/textMemoInputLayout" android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toTopOf="@+id/memoButton" app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="8dp"/>
    <android.support.v7.widget.CardView
            android:layout_width="0dp"
            android:layout_height="0dp"
            app:layout_constraintEnd_toStartOf="@+id/changeMemoBackButton" app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="16dp" android:layout_marginEnd="16dp"
            app:layout_constraintTop_toTopOf="@+id/changeMemoBackButton"
            app:layout_constraintBottom_toBottomOf="@+id/changeMemoBackButton"
            app:cardBackgroundColor="@color/darkText" android:id="@+id/testMemoCardView">
        <android.support.constraint.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

            <TextView
                    android:text="@string/testViewString"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" android:id="@+id/testMemoText"
                    android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
                    android:layout_marginTop="8dp" app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
                    android:textColor="@color/lightText"/>
        </android.support.constraint.ConstraintLayout>
    </android.support.v7.widget.CardView>
</android.support.constraint.ConstraintLayout>