<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                             xmlns:app="http://schemas.android.com/apk/res-auto"
                                             android:layout_width="match_parent"
                                             android:layout_height="match_parent">

    <TextView
            android:text="@string/dazeInput"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
            android:id="@+id/dazeInputTextView" android:layout_marginTop="32dp"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="24sp"
            android:background="@drawable/background_text_title"
            android:layout_marginStart="32dp" android:layout_marginEnd="32dp" android:gravity="center"
            android:textColor="@color/darkText"/>
    <android.support.constraint.ConstraintLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/dazeInputTextView" android:layout_marginTop="32dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="8dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="8dp"
            android:fitsSystemWindows="true">
        <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                app:layout_constraintTop_toTopOf="parent" android:id="@+id/dazeCardView">

            <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent" android:paddingBottom="12sp" android:paddingTop="12sp">

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/title" android:id="@+id/titleInput"
                            android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>
                <Space
                        android:layout_height="30sp" android:layout_width="wrap_content"/>

                <android.support.design.widget.TextInputLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent">
                    <android.support.design.widget.TextInputEditText
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/contentString" android:id="@+id/contentInput"
                            android:singleLine="true" android:inputType="text"/>
                </android.support.design.widget.TextInputLayout>

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <Button
                android:text="@string/input"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
                android:id="@+id/inputButton" android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginTop="8dp" app:layout_constraintTop_toBottomOf="@+id/dazeColorInputButton"
                android:background="@drawable/background_button"/>
        <Button
                android:text="@string/backColorChange"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/dazeColorInputButton"
                android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/dazeCardView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="8dp"
                android:background="@drawable/background_button"/>
        <android.support.v7.widget.CardView
                android:layout_width="0dp"
                android:layout_height="0dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                app:layout_constraintEnd_toStartOf="@+id/dazeColorInputButton" android:layout_marginEnd="24dp"
                app:layout_constraintBottom_toBottomOf="@+id/dazeColorInputButton"
                app:layout_constraintTop_toTopOf="@+id/dazeColorInputButton" android:id="@+id/testDazeCardView">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/testViewString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" android:layout_marginBottom="8dp"
                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="8dp" app:layout_constraintStart_toStartOf="parent"
                        android:layout_marginStart="8dp" android:layout_marginTop="8dp"
                        app:layout_constraintTop_toTopOf="parent" android:id="@+id/testDazeText"
                        android:textColor="@color/lightText"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
    </android.support.constraint.ConstraintLayout>
</android.support.constraint.ConstraintLayout>