<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:app="http://schemas.android.com/apk/res-auto"
            xmlns:tools="http://schemas.android.com/tools"
            xmlns:nendsdk="http://schemas.android.com/apk/res-auto"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
    <android.support.constraint.ConstraintLayout android:layout_width="match_parent"
                                                 android:layout_height="wrap_content">
        <TextView
                android:text="@string/tab1Name"
                android:layout_width="0dp"
                android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@id/nend_detail"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginTop="24dp"
                app:layout_constraintEnd_toEndOf="parent" android:id="@+id/textView"
                android:background="@drawable/background_text_title" android:textColor="@color/darkText"
                android:textSize="24sp" android:layout_marginEnd="32dp" android:layout_marginStart="32dp"
                android:gravity="center"
                android:focusable="true"
                android:focusableInTouchMode="true"/>
        <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content" android:layout_marginTop="16dp"
                app:layout_constraintTop_toBottomOf="@+id/textView" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" android:id="@+id/detailCardView"
                app:cardUseCompatPadding="true"
                app:cardCornerRadius="10sp">
            <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                <TextView
                        android:text="@string/title"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:id="@+id/detailTitle" android:layout_marginTop="16dp"
                        android:textSize="18sp" app:layout_constraintTop_toTopOf="parent"/>
                <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/detailTitleText" app:layout_constraintStart_toStartOf="@+id/detailTitle"
                        android:layout_marginStart="16dp" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/detailTitle" android:textSize="24sp" tools:text="題名"/>
                <TextView
                        android:text="@string/contentString"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="16dp"
                        android:id="@+id/detailContent" android:layout_marginTop="24dp"
                        app:layout_constraintTop_toBottomOf="@+id/detailTitleText" android:textSize="18sp"/>
                <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:id="@+id/detailContentText" app:layout_constraintStart_toStartOf="@+id/detailContent"
                        android:layout_marginStart="8dp" android:layout_marginTop="16dp"
                        app:layout_constraintTop_toBottomOf="@+id/detailContent"
                        app:layout_constraintEnd_toEndOf="parent"
                        android:layout_marginEnd="24dp" tools:text="内容の表示場所" android:textSize="18sp"
                        android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent"/>
            </android.support.constraint.ConstraintLayout>
        </android.support.v7.widget.CardView>
        <android.support.design.widget.TextInputLayout
                android:layout_height="wrap_content"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_width="0dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="24dp"
                android:id="@+id/textInputLayout" android:layout_marginTop="24dp"
                android:layout_marginBottom="8dp" app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/detailCardView">

            <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/memoString" android:id="@+id/detailMemoText"/>
        </android.support.design.widget.TextInputLayout>

        <net.nend.android.NendAdView
                android:id="@+id/nend_detail"
                android:layout_height="wrap_content"
                nendsdk:NendApiKey="@string/ad_detail_50_Key"
                nendsdk:NendSpotId="@integer/ad_detail_50_Id"
                nendsdk:NendAdjustSize="true"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_width="0dp"/>
    </android.support.constraint.ConstraintLayout>
</ScrollView>